<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/design_default_color_background"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />



        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="556dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".InformationClientFragment">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#eeeeee"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/bg"
                            android:src="@drawable/ic_person"

                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:background="#ffffff"
                                android:text="@string/if_fname"
                                android:textAlignment="center"
                                android:textSize="22dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="250dp"
                                android:layout_height="36dp"
                                android:background="#ffffff"
                                android:text="@string/if_id"
                                android:textAlignment="center"
                                android:textSize="22dp" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#ffffff"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginLeft="140dp"
                            android:src="@drawable/profile" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/if_name"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/if_dob"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/if_phone"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/if_address"
                            android:textSize="17dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:background="#ffffff"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginLeft="140dp"
                            android:src="@drawable/ic_school" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/if_major"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/AcademicyearThreeYears"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/if_class"
                            android:textSize="17dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

</RelativeLayout>