<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <ImageView
                    android:background="@drawable/bgg"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_person"
                    android:layout_marginLeft="30dp"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text="@string/if_fname"
                        android:textSize="22dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:background="#ffffff"
                        />
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="36dp"
                        android:text="@string/if_id"
                        android:textSize="22dp"
                        android:textAlignment="center"
                        android:background="#ffffff"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:id="@+id/inforr"
                android:clickable="true"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_info"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chart"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_grade"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_folder_open"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_file"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_language"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_web"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_input"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_help"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_help"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_input"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_settings"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_settings"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="horizontal"
                android:layout_marginVertical="40dp"
                android:id="@+id/loginn"
                android:clickable="true"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_logout"/>

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_logout"
                    android:textColor="#ff0000"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:layout_marginHorizontal="15dp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/design_default_color_background"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>