<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    >

    <!-- TODO: TRANG NÀY TRANG ĐẦU TIÊN -->

    <ImageView
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_margin="2dp"
        android:src="@drawable/homeimg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_school"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="30dp"
                android:text="@string/Coursecategories"
                android:textSize="22dp"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/bachelor"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="30dp"
                android:text="@string/Bachelor"
                android:textSize="22dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/master"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="30dp"
                android:text="@string/Master"
                android:textSize="22dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/PhDACADEMICRESOURCES"
                android:textSize="22dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="30dp"
                android:text="@string/Supportingdepartment"
                android:textSize="22dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="30dp"
                android:text="PLMCC"
                android:textSize="22dp"
                android:textStyle="bold"/>
        </LinearLayout>





    </LinearLayout>
</LinearLayout>